<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Amount"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="206dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_background"
        android:ems="10"
        android:hint="@string/enter_amount_to_pay"
        android:inputType="number"
        android:textColorHint="#616161" />

    <TextView
        android:id="@+id/Pay_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:background="@drawable/btn_back"
        android:padding="5dp"
        android:text="@string/pay"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/more_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:padding="5dp"
        android:text="@string/more"
        android:textAlignment="center"
        android:textColor="#330AE6"
        android:textSize="22sp"
        android:textStyle="bold" />


</LinearLayout>