<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/bac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_bg"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/abv" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="UserName"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
       android:textAlignment="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/you_re_currently_on_level_4_n_check_your_benefits"
        app:drawableStartCompat="@drawable/network"
        app:drawableEndCompat="@drawable/nenext" />

    <TextView
        android:id="@+id/textpolicy"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/privacy_policy"
        app:drawableStartCompat="@drawable/policy"
        app:drawableEndCompat="@drawable/nenext" />
    <TextView
        android:id="@+id/textTerms"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/terms_amp_conditions"
        app:drawableStartCompat="@drawable/terms"
        app:drawableEndCompat="@drawable/nenext" />


</LinearLayout>